--- a/views/overview.pug
+++ b/views/overview.pug
@@ -8,35 +8,35 @@ block content
                     .card__header
                         .card__picture
                             .card__picture-overlay &nbsp;
-                            img.card__picture-img(src='img/tour-1-cover.jpg', alt='Tour 1')
+                            img.card__picture-img(src=`img/tours/${el.imageCover}`, alt=`${el.name}`)
                         h3.heading-tertirary
                             span=el.name
 
                     .card__details
-                        h4.card__sub-heading Easy 5-day tour
-                        p.card__text Breathtaking hike through the Canadian Banff National Park
+                        h4.card__sub-heading= `${el.difficulty} ${el.duration}-day tour`
+                        p.card__text= `${el.summary}`
                         .card__data
                             svg.card__icon
                                 use(xlink:href='img/icons.svg#icon-map-pin')
-                            span Banff, Canada
+                            span= `${el.startLocation.description}`
                         .card__data
                             svg.card__icon
                                 use(xlink:href='img/icons.svg#icon-calendar')
-                            span April 2021
+                            span= `${el.startDates[0].toLocaleString('en-us', {month: 'long', year: 'numeric'})}`
                         .card__data
                             svg.card__icon
                                 use(xlink:href='img/icons.svg#icon-flag')
-                            span 3 stops
+                            span= `${el.locations.length} stops`
                         .card__data
                             svg.card__icon
                                 use(xlink:href='img/icons.svg#icon-user')
-                            span 25 people
+                            span= `${el.maxGroupSize} people`
 
                     .card__footer
                         p
-                            span.card__footer-value $297
+                            span.card__footer-value= `$${el.price} `
                             span.card__footer-text per person
                         p.card__ratings
-                            span.card__footer-value 4.9
-                            span.card__footer-text rating (21)
-                        a.btn.btn--green.btn--small(href='#') Details
+                            span.card__footer-value= `${el.ratingsAverage} `
+                            span.card__footer-text= `rating (${el.ratingsQuantity})`
+                        a.btn.btn--green.btn--small(href=`/tour/${el.slug}`) Details
